[package]
name = "dmalibrary"
version = "0.0.2"
edition = "2021"
authors = ["Stipulations"]
license = "MIT OR Apache-2.0"
keywords = ["memory", "forensics", "dma", "pcileech", "memprocfs"]
repository = "https://github.com/Stipulations/DMALibrary"
description = "A Rust crate that makes it easy to work with DMA cards for memory forensics and video game hacking"

[dependencies]
memprocfs = "5.11.1"